EcomApp-7: complete product crud
